--- a/package.json
+++ b/package.json
@@ -9,13 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.9.11",
+    "@expo/metro-runtime": "~4.0.1",
+    "@react-native-picker/picker": "^2.9.0",
+    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/native": "^7.1.6",
+    "babel-preset-expo": "^12.0.11",
     "expo": "~52.0.43",
     "expo-status-bar": "~2.0.1",
+    "expo-web-browser": "~14.0.2",
+    "firebase": "^11.6.0",
+    "formik": "^2.4.6",
+    "nativewind": "^2.0.11",
     "react": "18.3.1",
-    "react-native": "0.76.9"
+    "react-dom": "^18.3.1",
+    "react-native": "0.76.9",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.3.12",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
