--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
+    "@react-navigation/stack": "^7.2.10",
     "babel-preset-expo": "^12.0.11",
     "expo": "~52.0.43",
     "expo-image-picker": "^16.0.6",
@@ -21,14 +22,16 @@
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.6.0",
     "formik": "^2.4.6",
+    "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.9",
-    "react-native-gesture-handler": "^2.25.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "expo-sharing": "~13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
