--- a/package.json
+++ b/package.json
@@ -4,41 +4,45 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^2.9.14",
-    "@expo/metro-runtime": "~4.0.1",
+    "@clerk/clerk-expo": "^2.10.4",
+    "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-picker/picker": "^2.9.0",
+    "@firebase/app": "0.10.10",
+    "@firebase/firestore": "4.7.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.2.10",
-    "babel-preset-expo": "^12.0.11",
-    "expo": "^52.0.46",
-    "expo-image-picker": "^16.0.6",
-    "expo-secure-store": "^14.0.1",
-    "expo-sharing": "~13.0.1",
-    "expo-status-bar": "~2.0.1",
-    "expo-web-browser": "~14.0.2",
-    "firebase": "^11.6.0",
+    "babel-preset-expo": "~13.0.0",
+    "expo": "~53.0.0",
+    "expo-image-picker": "~16.1.4",
+    "expo-secure-store": "~14.2.3",
+    "expo-sharing": "~13.1.5",
+    "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.1.6",
+    "firebase": "10.13.1",
+    "firebase-admin": "12.4.0",
+    "firebase-tools": "13.16.0",
     "formik": "^2.4.6",
     "moment": "^2.30.1",
     "nativewind": "^2.0.11",
-    "react": "18.3.1",
-    "react-dom": "^18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.1",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-safe-area-context": "5.3.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.3.3"
   },
